Titulo da página, footer e links do header, e HOME do menu

--- a/public_html/wp-content/themes/tmz_ademario/assets/css/footer.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/footer.css
@@ -16,3 +16,31 @@
     display: block;
     font-size: 0;
 }
+#footer .right
+{
+    float: right;
+    width: 560px;
+}
+#footer .right .title
+{
+    color: #1386c4;
+    font-size: 2em;
+    font-style: italic;
+    font-weight: 900;
+}
+#footer .right .separator
+{
+    background-color: #1280c1;
+    height: 3px;
+    position: relative;
+}
+#footer .right .separator:before
+{
+    content: ' ';
+    height: 3px;
+    width: 900px;
+    background: #1280c1;
+    right: -900px;
+    top: 0;
+    position: absolute;
+}
