--- a/public_html/wp-content/themes/tmz_ademario/assets/css/general.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/general.css
@@ -1,5 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic);
 
+html
+{
+    width: 100%;
+    overflow-x: hidden;
+}
+
 * {
     font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #003662;
