Estilo do formulário de contato e ajuste da exibição de cursor: pointer

--- a/public_html/wp-content/themes/tmz_ademario/assets/css/body/posts.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/body/posts.css
@@ -8,8 +8,11 @@
     float: left;
     margin-bottom: 20px;
     height: 490px;
-    cursor: pointer;
     transition: background-color 0.3s;
+}
+#body .posts .post.list
+{
+    cursor: pointer;
 }
 #body .posts .post:hover
 {
@@ -78,7 +81,6 @@
     width: 100%;
     float: left;
     margin-bottom: 20px;
-    cursor: pointer;
     transition: background-color 0.3s;
 }
 #body .single .post .spacer
