--- a/public_html/wp-content/themes/tmz_ademario/assets/css/general.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/general.css
@@ -13,9 +13,17 @@ html
 .container
 {
     position: relative;
-    width: 1060px;
-    margin: 0 auto;
     clear: both;
+    width: 100%;
+    margin: 0;
+}
+@media (min-width: 1100px)
+{
+    .container
+    {
+        width: 1060px;
+        margin: 0 auto;
+    }
 }
 .clearfix:after {
     content: "";
