--- a/public_html/wp-content/themes/tmz_ademario/assets/css/general.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/general.css
@@ -14,7 +14,7 @@ html
 {
     position: relative;
     clear: both;
-    width: 100%;
+    padding: 0 20px;
     margin: 0;
 }
 @media (min-width: 1100px)
@@ -23,6 +23,7 @@ html
     {
         width: 1060px;
         margin: 0 auto;
+        padding: 0;
     }
 }
 .clearfix:after {
