--- a/public_html/wp-content/themes/tmz_ademario/assets/css/header.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/header.css
@@ -3,12 +3,6 @@
     height: 300px;
     background: url("/wp-content/themes/tmz_ademario/assets/imgs/header_bg.png") repeat-x;
 }
-#header .pic
-{
-    position: absolute;
-    top: 0;
-    left: 2px;
-}
 #header .pic a
 {
     background: url("/wp-content/themes/tmz_ademario/assets/imgs/header_head.png") no-repeat;
@@ -17,21 +11,69 @@
     font-size: 0;
     display: block;
 }
+#header .pic
+{
+    display: none;
+}
 #header .logo
 {
-    position: absolute;
-    top: 75px;
-    left: 313px;
+    position: relative;
+    padding-top: 80px;
+}
+@media (min-width: 540px) {
+    #header .logo {
+        padding-top: 0;
+        position: absolute;
+        top: 59px;
+        left: 20px;
+    }
+}
+@media (min-width: 850px) {
+    #header .pic
+    {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 2px;
+    }
+    #header .logo
+    {
+        position: absolute;
+        height: 0;
+        top: 75px;
+        left: 313px;
+    }
+}
+#header .logo a
+{
+    width: 100%;
+    padding: 28.947% 0 0 0;
+}
+@media (min-width: 540px) {
+    #header .logo a
+    {
+        width: 494px;
+        height: 143px;
+    }
 }
 #header .logo a
 {
     background: url("/wp-content/themes/tmz_ademario/assets/imgs/header_logo.png") no-repeat;
-    width: 494px;
-    height: 143px;
+    background-size: cover;
     display: block;
     font-size: 0;
 }
 /* MENU : BEGIN */
+#header .menu-wrapper
+{
+    margin-right: 20px;
+}
+@media (min-width: 1100px) {
+    #header .menu-wrapper
+    {
+        margin-right: 0;
+    }
+}
 #header .menu-wrapper .home,
 #header .menu .page_item
 {
