--- a/public_html/wp-content/themes/tmz_ademario/assets/css/header.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/header.css
@@ -74,10 +74,6 @@
         margin-right: 0;
     }
 }
-.menu-header_menu-container
-{
-    display: inline-block;
-}
 #header .menu-wrapper .home,
 #header .menu .menu-item
 {
@@ -85,6 +81,7 @@
     display: inline-block;
     float: left;
 }
+#header_mobile_menu,
 #header .menu-wrapper .home a,
 #header .menu .menu-item a
 {
@@ -95,6 +92,29 @@
     font-weight: 600;
     font-style: italic;
     font-size: 1.3em;
+}
+.menu-header_menu-container
+{
+    display: inline-block;
+}
+#header_mobile_menu
+{
+    display: inline-block;
+}
+#header .menu
+{
+    display: none;
+}
+@media (min-width: 800px)
+{
+    #header_mobile_menu
+    {
+        display: none;
+    }
+    #header .menu
+    {
+        display: inline-block;
+    }
 }
 #header .menu-wrapper .home a:after,
 #header .menu .menu-item a:after
@@ -113,10 +133,14 @@
     width: auto;
     right: 0;
 }
+#header_mobile_menu,
 #header .menu-wrapper .header-face-icon,
 #header .menu {
-    display: inline-block;
     vertical-align: middle;
+}
+#header .menu-wrapper .header-face-icon
+{
+    display: inline-block;
 }
 #header .menu-wrapper .header-face-icon a
 {
@@ -130,3 +154,55 @@
 
 }
 /* MENU : END */
+/* MOBILE MENU : BEGIN */
+#mobile_bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2000;
+    background-color: rgba(0,0,0,0.8);
+    display: none;
+}
+#mobile_menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    z-index: 2001;
+    background-color: #ffffff;
+    min-height: 100%;
+    margin-right: -300px;
+}
+#mobile_menu {
+    transition: all 0.3s;
+}
+#mobile_menu .mobile_container
+{
+    padding: 30px;
+    position: relative;
+}
+#mobile_menu hr
+{
+    border: none;
+    height: 0;
+    border-top: 1px #e9e9e9 solid;
+    margin: 20px 0;
+}
+#mobile_menu .mobile_container a img
+{
+    width: 100%;
+    height: auto;
+}
+#mobile_menu .mobile_container #menu-logo
+{
+    padding-top: 50px;
+}
+#mobile_menu .mobile_container a
+{
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 2em;
+}
+/* MOBILE MENU : END */
