Responsividade do footer

--- a/public_html/wp-content/themes/tmz_ademario/assets/css/footer.css
+++ b/public_html/wp-content/themes/tmz_ademario/assets/css/footer.css
@@ -7,19 +7,40 @@
 #footer .logo
 {
     float: left;
+    position: relative;
 }
 #footer .logo a
 {
     background: url("/wp-content/themes/tmz_ademario/assets/imgs/footer_logo.png") no-repeat;
-    width: 412px;
-    height: 119px;
     display: block;
     font-size: 0;
+    background-size: cover;
+}
+#footer .logo a
+{
+    width: 100%;
+    padding: 28.947% 0 0 0;
+}
+#footer .logo
+{
+    width: 100%;
 }
 #footer .right
 {
     float: right;
-    width: 560px;
+    width: 100%;
+}
+@media (min-width: 670px)
+{
+    #footer .logo
+    {
+        width: 35%;
+    }
+    #footer .right
+    {
+        float: right;
+        width: 60%;
+    }
 }
 #footer .right .title
 {
@@ -34,13 +55,40 @@
     height: 3px;
     position: relative;
 }
-#footer .right .separator:before
+#footer strong
 {
-    content: ' ';
-    height: 3px;
-    width: 900px;
-    background: #1280c1;
-    right: -900px;
-    top: 0;
-    position: absolute;
+    font-weight: 700;
+}
+@media (min-width: 1100px)
+{
+    #footer .logo a
+    {
+        width: 412px;
+        padding: 31% 0 0 0;
+    }
+    #footer .right
+    {
+        float: right;
+        width: 560px;
+    }
+    #footer .right .separator:before
+    {
+        content: ' ';
+        height: 3px;
+        width: 900px;
+        background: #1280c1;
+        right: -900px;
+        top: 0;
+        position: absolute;
+    }
+}
+#footer small
+{
+    font-size: 0.75em;
+}
+#footer .footer-face-wrapper img,
+#footer .footer-face-wrapper span
+{
+    display: inline-block;
+    vertical-align: middle;
 }
